@@ -2,7 +2,7 @@
 
 Please make sure you have Java (jdk 16)-16 installed and added to PATH in environment variables
 Open cmd and go to the folder where jar is location
-Run the command java -jar Computational-Methods-In-Finance.jar
+Run the command java --add-opens java.base/java.lang=ALL-UNNAMED -jar computational-finance-server.jar
 
 
 ### 1. Random Number Generation, Discrete and Continuous Random Variable Simulation. Inverse Transformation, Binomial Generation, Box-Muller and Polar-Marsaglia methods.
